test/sema/cast-ptr-to-immutable-into-ptr-to-mutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func f(v: void*) {
    // CHECK: [[@LINE+1]]:13: error: illegal cast from 'void*' to 'mutable int*'
    let p = cast<mutable int*>(v);
}
